--- a/logue-project/manifest.json
+++ b/logue-project/manifest.json
@@ -7,7 +7,7 @@
         "dev_id" : 0,
         "prg_id" : 0,
         "version" : "1.0-0",
-        "name" : "dummy",
+        "name" : "faust",
         "num_param" : 6,
         "params" : [
             ["dummy0",    0, 100, "%"],
