Generate a manifest file too!

--- a/logue-project/Makefile
+++ b/logue-project/Makefile
@@ -78,7 +78,7 @@ TOPT := -mthumb -mno-thumb-interwork -DTHUMB_NO_INTERWORKING -DTHUMB_PRESENT
 # #############################################################################
 
 PKGARCH := $(PROJECT).mnlgxdunit
-MANIFEST := manifest.json
+MANIFEST := ../build/manifest.json
 PAYLOAD := payload.bin
 
 BUILDDIR := $(PROJECTDIR)/../build
